fixed collapse tabbing

--- a/services/frontend-v3/src/App.css
+++ b/services/frontend-v3/src/App.css
@@ -204,7 +204,7 @@ a.ant-btn.ant-btn-link.ant-btn-block:focus {
   background-color: #08bab427;
 }
 
-.amt-collapse-header:focus {
+.ant-collapse-header:focus {
   background-color: #08bab427;
 }
 
